Add new feature.
Create new template with store product stock. Add features with add and delete product on specify store. Store is getting from actual user and change product stock for this store.